# heat_equation

./: CMakeLists.txt  array2d.cpp  array2d.h  concur_queue.cpp  concur_queue.h  generate.py  heat_equation.cpp  heat_equation.h  main  main.cpp  main2.cpp  table.txt
include/array2d/: array2d.h
include/conf_handler/: confhandler.h
include/heat_equation/: heat_equation.h  heat_equation_functions.h
src/array2d/: array2d.cpp
src/conf_handler/: confhandler.cpp
src/heat_equation/: heat_equation.cpp  heat_equation_functions.cpp
